[tool.poetry]
name = "urlshrtr"
version = "0.1.0"
description = "Yet another url shortener"
authors = ["Alexey Minakov <sintez.pm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
redis = "^4.3.4"
nanoid = "^2.0.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8-isort = "^4.2.0"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"
freezegun = "^1.2.2"
requests = "^2.28.1"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
